# sofi-substrate

node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/assets/: Cargo.toml
pallets/assets/src/: lib.rs
pallets/balances/: Cargo.toml
pallets/balances/src/: lib.rs
pallets/dex/: Cargo.toml
pallets/dex/src/: lib.rs  mock.rs  tests.rs
pallets/portfolio/: Cargo.toml
pallets/portfolio/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: Cargo.toml  lib.rs
primitives/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
